--- a/.gitignore
+++ b/.gitignore
@@ -12,7 +12,8 @@ dist
 dist-ssr
 *.local
 /src/App.tsx
-
+./src/App.tsx
+src/App.tsx
 # Editor directories and files
 .vscode/*
 !.vscode/extensions.json
